[project]
name = "ws-streamer"
version = "0.1.913"
authors = [
  { name="ven.ajie", email="venoajie@gmail.com" },
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies =  [ 
    "aioredis>=2.0.1",
    "ccxt==4.4.74",
    "dataclassy==1.0.1",
    "loguru==0.7.3",
    "orjson==3.10.15",
    "python-dotenv==1.0.1",
    "python-telegram-bot==22.0",
    "redis[hiredis]>=5.2.1",
    "tomli==2.0.2",
    "uvloop>=0.21.0",
    "websockets==15.0",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ws_streamer"]
